feat: send images in vehicle creation
